Add instructions for how to get and set up the JS ScriptEngine.